Update config with Snowflake option entries.

--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -22,5 +22,8 @@
     <add key="ServicePrincipalBasedAuthentication" value ="false"/>
     <add key="ServicePrincipalAppId" value ="YourAppId - You can use the same app id, which you´ve used for installing the LCS Add-In"/>
     <add key="ServicePrincipalSecret" value ="YourSecret - Corresponding Secret"/-->
+
+    <add key="targetSnowflakeDbConnectionString" value ="account=testaccount;user=testuser;password=XXXXX;db=testdb;schema=testschema"/>
+    <add key="targetSnowflakeDbSchema" value ="d365_table"/>
   </appSettings>
 </configuration>
