Added new entry for Snowfalke.

--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -23,7 +23,7 @@
     <add key="ServicePrincipalAppId" value ="YourAppId - You can use the same app id, which you´ve used for installing the LCS Add-In"/>
     <add key="ServicePrincipalSecret" value ="YourSecret - Corresponding Secret"/-->
 
-    <add key="TargetSnowflakeDbConnectionString" value ="account=testaccount;user=testuser;password=XXXXX;db=testdb;schema=testschema"/>
+    <add key="TargetSnowflakeDbConnectionString" value ="account=testaccount;user=testuser;password=XXXXX;db=testdb;schema=d365_table"/>
     <add key="TargetSnowflakeDbSchema" value ="d365_table"/>
     <add key="TargetSnowflakeExistingStorageIntegrationNameWithSchema" value="schema.integreation"/>
   </appSettings>
