Added creating Snowflake task.

--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -25,6 +25,8 @@
 
     <add key="TargetSnowflakeDbConnectionString" value ="account=testaccount;user=testuser;password=XXXXX;db=testdb;schema=d365_table"/>
     <add key="TargetSnowflakeDbSchema" value ="d365_table"/>
+    <!-- Warehouse defined in the created tasks for copy data-->
+    <add key="TargetSnowflakeWarehouse" value ="d365_dw"/>
     <add key="TargetSnowflakeExistingStorageIntegrationNameWithSchema" value="schema.integreation"/>
   </appSettings>
 </configuration>
