Added dry run option to display sql statement on the consolve only.

--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -23,6 +23,9 @@
     <add key="ServicePrincipalAppId" value ="YourAppId - You can use the same app id, which you´ve used for installing the LCS Add-In"/>
     <add key="ServicePrincipalSecret" value ="YourSecret - Corresponding Secret"/-->
 
+
+    <add key="TableNames" value ="SalesTable"/>
+    <add key="TargetSnowflakeDryRun" value ="True"/> <!--True: Output to console of sql statements without executing. False: executing sql statement in Snowflake-->
     <add key="TargetSnowflakeDbConnectionString" value ="account=testaccount;user=testuser;password=XXXXX;db=testdb;schema=d365_table"/>
     <add key="TargetSnowflakeDbSchema" value ="d365_table"/>
     <!-- Warehouse defined in the created tasks for copy data-->
