--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -1,35 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings>
-    <add key="TenantId" value="00000000-86f1-41af-91ab-0000000" />
-    <add key="AccessKey" value="YourStorageAccountAccessKey" />
-    <add key="ManifestURL" value="https://youradls.blob.core.windows.net/dynamics365-financeandoperations/yourenvvi.sandbox.operations.dynamics.com/Tables/Tables.manifest.cdm.json" />
-    <add key="TargetDbConnectionString" value="Server=yoursynapseworkspace-ondemand.sql.azuresynapse.net;Initial Catalog=dbname;Authentication='Active Directory Integrated'" />
-    <!--add key="TargetSparkConnection" value="https://yoursynapseworkspace.dev.azuresynapse.net@synapsePool@dbname" /-->
-    <!--Parameters bellow are optional overide parameters/-->
-    <!--add key="DataSourceName" value="d365folabanalytics_analytics" />
-    <add key="DefaultStringLength" value ="1000"/>
-    <add key="DDLType" value="SynapseView" />
-    <add key="Schema" value="dbo" />
-    <add key="FileFormat" value="CSV" />
-    <add key="ParserVersion" value="2.0" />
-    <add key="TranslateEnum" value ="false"/>
-    <add key="TableNames" value ="SalesTable"/>
-    <add key="ProcessEntities" value ="true"/>
-    <add key="CreateStats" value ="false"/>
-    <add key="ProcessSubTableSuperTables" value ="true"/>
-    <add key="AXDBConnectionString" value ="Server=DBServer;Database=AXDB;Uid=youruser;Pwd=yourpassword"/>
-    <add key="ServicePrincipalBasedAuthentication" value ="false"/>
-    <add key="ServicePrincipalAppId" value ="YourAppId - You can use the same app id, which you´ve used for installing the LCS Add-In"/>
-    <add key="ServicePrincipalSecret" value ="YourSecret - Corresponding Secret"/-->
+    <appSettings>
+        <add key="TenantId" value="00000000-XXXX-0000000" />
+        <add key="AccessKey" value="YourStorageAccountAccessKey" />
+        <add key="ManifestURL" value="https://youradls.blob.core.windows.net/dynamics365-financeandoperations/yourenvvi.sandbox.operations.dynamics.com/Tables/Tables.manifest.cdm.json" />
+        <add key="TranslateEnum" value ="true" />
 
-
-    <add key="TableNames" value ="SalesTable"/>
-    <add key="TargetSnowflakeDryRun" value ="True"/> <!--True: Output to console of sql statements without executing. False: executing sql statement in Snowflake-->
-    <add key="TargetSnowflakeDbConnectionString" value ="account=testaccount;user=testuser;password=XXXXX;db=testdb;schema=d365_table"/>
-    <add key="TargetSnowflakeDbSchema" value ="d365_table"/>
-    <!-- Warehouse defined in the created tasks for copy data-->
-    <add key="TargetSnowflakeWarehouse" value ="d365_dw"/>
-    <add key="TargetSnowflakeExistingStorageIntegrationNameWithSchema" value="schema.integreation"/>
-  </appSettings>
+        <add key="tablenames" value ="AssetBook" />
+        <!--True: Output to console of sql statements without executing. False: executing sql statement in Snowflake-->
+        <add key="TargetSnowflakeDryRun" value ="false" />
+        <add key="TargetSnowflakeDbConnectionString" value ="account=XXXX.australia-east.azure;user=XXXX;password=XXXX;db=XXXX;schema=XXXX"/>
+        <add key="TargetSnowflakeDbSchema" value ="XXXX" />
+        <!-- Warehouse defined in the created tasks for copy data-->
+        <add key="TargetSnowflakeWarehouse" value ="XXXX" />
+        <!-- The Snowflake integation name for the Azure -->
+        <add key="TargetSnowflakeExistingStorageIntegrationNameWithSchema" value="XXXX"/>
+    </appSettings>
 </configuration>
