Tidy up config with comments.

--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -6,14 +6,18 @@
         <add key="ManifestURL" value="https://youradls.blob.core.windows.net/dynamics365-financeandoperations/yourenvvi.sandbox.operations.dynamics.com/Tables/Tables.manifest.cdm.json" />
         <add key="TranslateEnum" value ="true" />
 
-        <add key="tablenames" value ="AssetBook" />
-        <!--True: Output to console of sql statements without executing. False: executing sql statement in Snowflake-->
+        <!--True: Output to console of sql statements without executing. False: executing sql statement in Snowflake. -->
         <add key="TargetSnowflakeDryRun" value ="false" />
+        <!-- Process specific tables specified below. Comment out to process for all tables avaiable in the lake. -->
+        <add key="tablenames" value ="AssetBook" />
+
+        <!-- Connection string for the target Snowflake account. -->
         <add key="TargetSnowflakeDbConnectionString" value ="account=XXXX.australia-east.azure;user=XXXX;password=XXXX;db=XXXX;schema=XXXX"/>
+        <!-- The target Snowflake schema which database objects will be created in. -->
         <add key="TargetSnowflakeDbSchema" value ="XXXX" />
-        <!-- Warehouse defined in the created tasks for copy data-->
+        <!-- Snowflake warehouse used by the created tasks for copy data. -->
         <add key="TargetSnowflakeWarehouse" value ="XXXX" />
-        <!-- The Snowflake integation name for the Azure -->
+        <!-- The Snowflake integation name for the Azure. -->
         <add key="TargetSnowflakeExistingStorageIntegrationNameWithSchema" value="XXXX"/>
     </appSettings>
 </configuration>
