--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -13,11 +13,19 @@
 
         <!-- Connection string for the target Snowflake account. -->
         <add key="TargetSnowflakeDbConnectionString" value ="account=XXXX.australia-east.azure;user=XXXX;password=XXXX;db=XXXX;schema=XXXX"/>
+        <!-- instruct the program to setup Snowflake DB. setup includes:
+            1. Create target sechma.
+            2. Create file format for the Data Lake in the target schema.
+            3. Create external stage for the Data Lake in the target schema.
+            4. Create SP_UPDATE_METADATA_DATA_LAKE_FILE_LIST in the target schema.
+            5. Create SP_COPY_MAIN in the target schema.
+            6. Create TK_COPY_MAIN and TK_COPY_MAIN_FULL_RELOAD  in the target schema. -->
+        <add key="TargetSnowflakeSetupDb" value ="false"/>
         <!-- The target Snowflake schema which database objects will be created in. -->
         <add key="TargetSnowflakeDbSchema" value ="XXXX" />
         <!-- Snowflake warehouse used by the created tasks for copy data. -->
         <add key="TargetSnowflakeWarehouse" value ="XXXX" />
         <!-- The Snowflake integation name for the Azure. -->
-        <add key="TargetSnowflakeExistingStorageIntegrationNameWithSchema" value="XXXX"/>
+        <add key="TargetSnowflakeExistingStorageIntegrationName" value="XXXX"/>
     </appSettings>
 </configuration>
