modified value in config

--- a/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
+++ b/Analytics/CDMUtilSolution/CDMUtil_ConsoleApp/CDMUtil_ConsoleApp.dll.config
@@ -7,7 +7,7 @@
         <add key="TranslateEnum" value ="true" />
 
         <!--True: Output to console of sql statements without executing. False: executing sql statement in Snowflake. -->
-        <add key="TargetSnowflakeDryRun" value ="false" />
+        <add key="TargetSnowflakeDryRun" value ="true" />
         <!-- Process specific tables specified below. Comment out to process for all tables avaiable in the lake. -->
         <add key="tablenames" value ="AssetBook" />
 
@@ -20,7 +20,7 @@
             4. Create SP_UPDATE_METADATA_DATA_LAKE_FILE_LIST in the target schema.
             5. Create SP_COPY_MAIN in the target schema.
             6. Create TK_COPY_MAIN and TK_COPY_MAIN_FULL_RELOAD  in the target schema. -->
-        <add key="TargetSnowflakeSetupDb" value ="false" />
+        <add key="TargetSnowflakeSetupDb" value ="true" />
         <!-- The target Snowflake schema which database objects will be created in. -->
         <add key="TargetSnowflakeDbSchema" value ="XXXX" />
         <!-- Snowflake warehouse used by the created tasks for copy data. -->
